--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,7 @@
 /* Add custom font import for Instagram logo */
 @import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap');
 
+/* Now you can write other CSS */
 .font-instagram {
   font-family: 'Grand Hotel', cursive;
 }
